--- a/templates/Front/blog.html.twig
+++ b/templates/Front/blog.html.twig
@@ -72,7 +72,8 @@
         </div>
         <!-- Topbar End -->
 
-        <!-- Navbar & Hero Start -->
+         <!-- Navbar & Hero Start -->
+        {% block navbar_hero %}
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
@@ -84,29 +85,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
-                        <a href="packages.html" class="nav-item nav-link">Packages</a>
-                        <a href="blog.html" class="nav-item nav-link active">Blog</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu m-0">
-                                <a href="destination.html" class="dropdown-item">Destination</a>
-                                <a href="tour.html" class="dropdown-item">Explore Tour</a>
-                                <a href="booking.html" class="dropdown-item">Travel Booking</a>
-                                <a href="gallery.html" class="dropdown-item">Our Gallery</a>
-                                <a href="guides.html" class="dropdown-item">Travel Guides</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
-                            </div>
-                        </div>
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="{{path('app_test_temp_about')}}" class="nav-item nav-link">About</a>
+                        <a href="services.html" class="nav-item nav-link">Produit</a>
+                        <a href="packages.html" class="nav-item nav-link">Event</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
+                        
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
+                    <a href="{{path('app_test_temp_booking')}}" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
                 </div>
             </nav>
-        </div>
         <!-- Navbar & Hero End -->
 
         <!-- Header Start -->
