--- a/templates/Front/blog.html.twig
+++ b/templates/Front/blog.html.twig
@@ -100,8 +100,7 @@
                     <a href="{{path('app_test_temp_about')}}" class="nav-item nav-link">About</a>
                     <a href="services.html" class="nav-item nav-link">Produit</a>
                     <a href="packages.html" class="nav-item nav-link">Event</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-
+                    <a href="{{path('app_test_temp_blog')}}" class="nav-item nav-link">Blog</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 <a href="{{path('app_test_temp_booking')}}" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book
