--- a/templates/comment/new.html.twig
+++ b/templates/comment/new.html.twig
@@ -10,6 +10,20 @@
                 <h2 class="fw-bold">📝 Create new Comment</h2>
             </div>
             <div class="card-body p-4">
+            {% for message in app.flashes('danger') %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+                
                 {{ include('comment/_form.html.twig', {'button_label': '➕ Create Comment'}) }}
             </div>
         </div>
