first back user

--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -10,9 +10,9 @@
         {{ include('user/_form.html.twig', {'button_label': 'Update', 'attr': {'class': 'form'}}) }}
     </div>
 
-    <div class="mt-4">
+    <!--<div class="mt-4">
         <a href="{{ path('app_user_index') }}" class="btn btn-secondary">Back to List</a>
         <a href="{{ path('app_user_delete', {'id': user.id}) }}" class="btn btn-danger">Delete</a>
-    </div>
+    </div>-->
 </div>
 {% endblock %}
