--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,10 +3,12 @@
 {% block title %}User Details{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <h1 class="mb-4">User Details</h1>
+<div class="container mt-5">
+    <!-- Header -->
+    <h1 class="mb-5 text-dark text-center">User Details</h1>
 
-    <table class="table table-bordered">
+    <!-- User Details Table -->
+    <table class="table table-bordered" style="border-color: black; width: 80%; margin: 0 auto;">
         <tbody>
             <tr>
                 <th scope="row" class="w-25">ID</th>
@@ -35,10 +37,24 @@
         </tbody>
     </table>
 
-    <div class="mt-4">
+    <!-- Action Buttons -->
+    <div class="mt-4 text-center">
         <a href="{{ path('app_user_index') }}" class="btn btn-secondary">Back to List</a>
         <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-warning">Edit</a>
         <a href="{{ path('app_user_delete', {'id': user.id}) }}" class="btn btn-danger">Delete</a>
     </div>
 </div>
+
+<!-- Custom CSS -->
+<style>
+    /* Ensure black border */
+    table, th, td {
+        border-color: black !important;
+    }
+
+    /* Lower the table */
+    .mt-5 {
+        margin-top: 300px; /* Adjust this value to lower further */
+    }
+</style>
 {% endblock %}
