--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,5 +33,9 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+
+    <a href="/reset-password" class="btn btn-lg btn-primary">Forget password?</a>
+    <a href="/test/temp" class="btn btn-lg btn-primary">Back</a>
+
 </form>
 {% endblock %}
