first+back+bundle

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -57,6 +57,10 @@
                   </button>
 
                   <div class="text-center">
+                    <a class="text-primary fw-bold" href="{{path('app_test_temp')}}">Back</a>
+                  </div>
+
+                  <div class="text-center">
                     <p class="fs-6 mb-0">Already have an Account?</p>
                     <a class="text-primary fw-bold" href="{{ path('app_login') }}">Sign In</a>
                   </div>
