CRUD + API STRIPE WORKING

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="{{path('app_test_temp_about')}}" class="nav-item nav-link">About</a>
-                        <a href="{{path('customer_products')}}" class="nav-item nav-link">Produit</a>
+                        <a href="{{path('app_products')}}" class="nav-item nav-link">Produit</a>
                         <a href="packages.html" class="nav-item nav-link">Event</a>
                         <a href="{{path('404')}}" class="nav-item nav-link">Blog</a>                        
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
