first+back+bundle+API

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -241,6 +241,10 @@ justify-content-center">
 
                 <span class="d-sm-inline d-none">Profile</span>
 
+                <div class="d-inline-flex align-items-center" style="height: 45px;">
+                    <a href="/test/temp1"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>FrontEnd</small></a>
+                </div>
+
               </a>
 
             </li>
