--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -3,9 +3,17 @@
 {% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
-    <p>
-        If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
-        This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-    </p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    <div class="container mt-5">
+        <div class="alert alert-info" role="alert">
+            <p>
+                If an account matching your email exists, an email has been sent containing a link to reset your password.
+                This link will expire in 
+                <strong>{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}</strong>.
+            </p>
+            <p>
+                If you don't receive an email, please check your spam folder or 
+                <a href="{{ path('app_forgot_password_request') }}" class="alert-link">try again</a>.
+            </p>
+        </div>
+    </div>
 {% endblock %}
