--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -3,21 +3,30 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
-    <h1>Reset your password</h1>
+    <div class="container mt-5">
+        {% for flash_error in app.flashes('reset_password_error') %}
+            <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+        {% endfor %}
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address, and we will send you a
-                link to reset your password.
-            </small>
+        <div class="card shadow-lg p-4">
+            <h1 class="mb-3 text-center">Reset your password</h1>
+
+            {{ form_start(requestForm, {'attr': {'class': 'needs-validation'}}) }}
+                <div class="mb-3">
+                    {{ form_row(requestForm.email, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="mb-3 text-muted">
+                    <small>
+                        Enter your email address, and we will send you a
+                        link to reset your password.
+                    </small>
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <button class="btn btn-primary">Send password reset email</button>
+                    <a href="/login" class="btn btn-secondary">Back to login</a>
+                </div>
+            {{ form_end(requestForm) }}
         </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
-        <a href="/login" class="btn btn-primary">Back to login</a>
-    {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
