first+back+bundle+API

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -133,10 +133,9 @@ d-xl-none" aria-hidden="true" id="iconSidenav"></i>
 
       <a class="navbar-brand m-0" href="" target="_blank">
 
-        <img src="{{ asset('../assets/img/logo-ct-dark.png') }}" width="26px" height="26px" class="navbar-brand-
-img h-100" alt="main_logo">
+        <img src="{{ asset('../assets/img/Logo.png') }}" width="90px" height="90px" class="navbar-brand-img h-100" alt="main_logo">
 
-        <span class="ms-1 font-weight-bold">team name</span>
+        <span class="ms-1 font-weight-bold">WorldCultura</span>
 
       </a>
 
